# visuo-tactile-world-models

./: .gitignore  README.md  RH20main.py  aloha_main.py  aloha_test.py  download_cosmos.py  download_cosmos_video.py  environment.yaml  extract_slides.py  fusion_layer.py  inference.py  run_training.sh  tactile_encoder.py  test_action.py  test_cosmos.py  test_cosmos_video.py  test_joints.py  test_sparsh.py  test_sync.py  test_tactile.py  test_video_sync.py  test_vision.py  train.py  train_task.py  world_transformer.py
assets/metahand/: meta_hand_franka.urdf  meta_hand_left.urdf  meta_hand_right.urdf  meta_hand_right_digit.urdf
assets/metahand/meta_hand_description/: CMakeLists.txt  README.md  package.xml
assets/metahand/meta_hand_description/launch/: test_hand.launch
assets/metahand/meta_hand_description/robots/: allegro_hand.urdf.xacro  meta_hand.urdf.xacro
assets/metahand/meta_hand_description/rviz/: meta_hand.rviz
config/: default.yaml  default_task.yaml
config/algorithm/: d360_dino.yaml  xela_byol.yaml  xela_dinov2.yaml  xela_mae.yaml
config/encoder/: digit360_sparshx.yaml  xela_sparshskin.yaml
config/paths/: default.yaml
config/task/: d360_t1_force_estimation.yaml  d360_t2_classification.yaml  xela_force_estimation.yaml  xela_joystick_control.yaml  xela_relative_pose.yaml
scripts/d360/: extract_images.py  mcap2pickle.py  mcap_utils.py  policy_dataset_utils.py
scripts/xela/: convertbag2dataset.py  generate_policy_dataset.py  visualize_sparshskin_umap.ipynb
tactile_ssl/: build_encoder.py
tactile_ssl/algorithm/: __init__.py  byol.py  d360_dino.py  (+6 more)
(+82 files in other folders)
